Start of adding in my own slides

--- a/css/reveal.css
+++ b/css/reveal.css
@@ -1173,3 +1173,10 @@ body {
 
 .zoomed .reveal .roll span:after {
   visibility: hidden; }
+
+  /*********************************************
+ * CUSTOM
+ *********************************************/
+.lowercase {
+  text-transform: lowercase;
+}
